# django-payments-chile

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: new_release.yml  tests_coverage.yml
django_payments_chile/: FlowProvider.py  KhipuProvider.py  PaykuProvider.py  WebpayProvider.py  __init__.py  clientes.py  providers.py  version.py
docs/: CHANGELOG.md  api-flowprovider.md  api-khipuprovider.md  api-webpayprovider.md  api.md  contributing.md  guia-django.md  guia-introduccion.md  guia-tienda.md  index.md  providers.md  uso.md
ejemplo/: README.md  pyproject.toml
ejemplo/pagos/: admin.py
ejemplo/tienda/: asgi.py  settings.py  urls.py  wsgi.py
tests/: django_settings.py  test_core.py  test_flowprovider.py  test_khipuprovider.py
tienda_pruebas/: django_payments_chile  pyproject.toml
tienda_pruebas/pagos/: models.py  tests.py  views.py
tienda_pruebas/tienda/: asgi.py  urls.py
