[project]
name = "django-payments-chile"
version = "2024.12.12"
description = "Pasarelas de pago chilenas para django-payments"
readme = "README.md"
authors = [{ "name" = "Mario Hernandez", "email" = "mariofix@proton.me" }]
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"

keywords = [
    "flow",
    "khipu",
    "kushki",
    "transbank",
    "payku",
    "pagofacil",
    "webpay",
    "onepay",
    "pagos",
    "django",
    "payment",
    "django-payments",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Operating System :: OS Independent",
]

dependencies = ["django-payments>=2.0, <4.0", "requests"]

[project.urls]
homepage = "https://mariofix.github.io/django-payments-chile/"
repository = "https://github.com/mariofix/django-payments-chile"
documentation = "https://mariofix.github.io/django-payments-chile/"


[project.optional-dependencies]
flow = ["pyflowcl"]
khipu = ["pykhipu>=0.1.9"]
webpay = ["transbank-sdk>=5.0.0"]
oneclick = ["transbank-sdk>=5.0.0"]
todos = ["pyflowcl", "pykhipu>=0.1.9", "transbank-sdk>=5.0.0"]

[dependency-groups]
dev = [
    "pre-commit>=3.8,<5.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "coverage>=7.6.1",
    "pytest>=8.3.3",
    "faker>=30.0.0",
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.5.39",
    "mkdocstrings[python]>=0.22,<0.27",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "pillow>=10,<12",
    "cairosvg>=2.7.0",
    "lxml>=4.9.3,<6.0.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-django>=4.5.2",
    "pytest-mock>=3.11.1",
    "dj-database-url>=2.0.0",
    "factory-boy>=3.3.0",
    "tox>=4.6.4",
    "tox-gh-actions>=3.1.3",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["django_payments_chile", "tests"]

[tool.pytest.ini_options]
# DJANGO_SETTINGS_MODULE = "tests.django_settings"
addopts = "--cov=django_payments_chile/ --cov-branch --cov-report=term-missing --cov-report=xml"

[tool.black]
line-length = 119
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5
py_version = 39
src_paths = ["django_payments_chile", "tests", "ejemplo"]
